--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<title>Merak</title>
+
 </head>
 <body>
 	<header>
-
 		<nav>
 			<ul class="main-nav">
 				<li class="pushr"><a href="" ><img src="img/nav/menu.png" class="icon"></a></li>
@@ -26,55 +26,53 @@
 		</nav>
 	</header>
 
-<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="3000">
-      <img src="img/cover/f_skin.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption">
-        <h5>Grove Collection</h5>
-        <p>Premium nature inpired skins to transfrom your cellphone.<br><button class="form_btn cover_btn">buy now</button></p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="3000">
-      <img src="img/cover/sound.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption">
-        <h5>The Knox</h5>
-        <p>Our Knox speaker, the perfect placeholder in all your parties.<br><button class="form_btn cover_btn">buy now</button></p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="3000">
-      <img src="img/cover/sound2.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption">
-      <!-- <div class="carousel-caption d-none d-md-block"> -->
-        <h5>Smartbuds</h5>
-        <p>Wireless. Effortless. Magical.<br><button class="form_btn cover_btn">buy now</button></p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+	<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  		<div class="carousel-indicators">
+    		<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" 	aria-label="Slide 1"></button>
+    		<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    		<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  		</div>
+  		<div class="carousel-inner">
+    		<div class="carousel-item active" data-bs-interval="3000">
+      			<img src="img/cover/f_skin.jpg" class="d-block w-100" alt="...">
+      			<div class="carousel-caption">
+        			<h5>Grove Collection</h5>
+        			<p>Premium nature inpired skins to transfrom your cellphone.<br><button class="form_btn cover_btn">buy now</button></p>
+      			</div>
+    		</div>
+    		<div class="carousel-item" data-bs-interval="3000">
+      			<img src="img/cover/sound.jpg" class="d-block w-100" alt="...">
+      			<div class="carousel-caption">
+        			<h5>The Knox</h5>
+        			<p>Our Knox speaker, the perfect placeholder in all your parties.<br><button class="form_btn cover_btn">buy now</button></p>
+      			</div>
+    		</div>
+    		<div class="carousel-item" data-bs-interval="3000">
+      			<img src="img/cover/sound2.jpg" class="d-block w-100" alt="...">
+      			<div class="carousel-caption">
+        			<h5>Smartbuds</h5>
+        			<p>Wireless. Effortless. Magical.<br><button class="form_btn cover_btn">buy now</button></p>
+      			</div>
+    		</div>
+  		</div>
+  		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    		<span class="visually-hidden">Previous</span>
+  		</button>
+  		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+    		<span class="visually-hidden">Next</span>
+  		</button>
+	</div>
  
+
 	<section class="scrolling-wrapper">
   		<div class="tile"><img src="img/collection/cover.png"><p class="align">Covers and cases</p></div>
   		<div class="tile"><img src="img/collection/protect.png"><p class="align">Screen protectors</div>
    		<div class="tile"><img src="img/collection/charge.png"><p class="align">Charging accssories</div>
   		<div class="tile"><img src="img/collection/speaker.png"><p class="align">Speakers</div>
   		<div class="tile"><img src="img/collection/earbuds.png"><p class="align">earbuds</div>
-
 	</section>
-
 
 
 
@@ -82,11 +80,13 @@
  		<h3>@</h3>
  		<h3>Newsletter</h3>
  		<p>Subscribe to get the latest news, updates and special offers in your inbox.</p>
- 		<form>
+ 		<form method="post">
  			<input type="email" name="Newsletter" placeholder="E-mail" class="form_mail">
  			<input type="submit" value="Subscribe" class="form_btn">
  		</form>
  	</section>
+
+
 
 	<footer>
 		<section class="lower-nav">
