--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  		<h3>@</h3>
  		<h3>Newsletter</h3>
  		<p>Subscribe to get the latest news, updates and special offers in your inbox.</p>
- 		<form method="post">
+ 		<form>
  			<input type="email" name="Newsletter" placeholder="E-mail" class="form_mail">
  			<input type="submit" value="Subscribe" class="form_btn">
  		</form>
